[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/title-1.png" type="Texture" id=1]
[ext_resource path="res://sprites/title.png" type="Texture" id=2]
[ext_resource path="res://sprites/start.png" type="Texture" id=3]
[ext_resource path="res://sprites/start_focus.png" type="Texture" id=4]
[ext_resource path="res://sprites/exit.png" type="Texture" id=5]
[ext_resource path="res://sprites/exit_focus.png" type="Texture" id=6]
[ext_resource path="res://Title.gd" type="Script" id=7]

[node name="Title" type="Node"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -8, -6 )
scale = Vector2( 1.05, 0.989691 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 20.0
margin_right = 288.0
margin_bottom = 160.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 44.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 74.0
margin_top = 60.0
margin_right = 182.0
margin_bottom = 88.0
size_flags_horizontal = 4

[node name="StartButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 108.0
margin_bottom = 12.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 30.0
margin_top = 16.0
margin_right = 77.0
margin_bottom = 28.0
size_flags_horizontal = 4
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
